<resources>
    <string name="app_name">Cơm nhà</string>
    <string name="facebook_app_id">160568224411760</string>
    <string name="text_admin_selection_news">Thông báo thêm mới: từ bài đánh giá, quán ăn</string>
    <string name="text_admin_selection_reports">Thông báo report: từ những bài đánh giá, hình ảnh, quán ăn, món ăn</string>
    <string name="text_admin_user_management">Quản lý tài khoản</string>
    <string name="text_delnotify">Xóa thông báo</string>
    <string name="text_hidefood">Ẩn món ăn</string>
    <string name="text_rate">Đánh giá quán ăn</string>
    <string name="text_addimg">Đánh giá quán ăn</string>
    <string name="text_post">Bài viết</string>
    <string name="text_toolbar_title_writepost">Viết bài đánh giá</string>
    <string name="text_admin_block_addstore_notify_newstore">Chặn \"Thêm quán ăn\"</string>
    <string name="text_admin_block_post_notify_newpost">Chặn \"Đăng Review\"</string>
    <string name="text_tenquan">Tên quán</string>
    <string name="text_btnsendreport">Gửi</string>
    <string name="text_foodname">Tên món ăn</string>
    <string name="text_addfood">Thêm món ăn</string>
    <string name="text_tinhTP">Tỉnh/Thành phố</string>
    <string name="text_thucdon">Thực đơn</string>
    <string name="text_quanhuyen">Quận/Huyện</string>
    <string name="text_sdt">Số điện thoại</string>
    <string name="text_openningTime">Giờ mở cửa</string>
    <string name="text_start">Từ</string>
    <string name="text_end">Đến</string>
    <string name="text_price">Giá</string>
    <string name="text_more">Mở rộng</string>
    <string name="text_foodcateg">Loại món ăn</string>
    <string name="text_choosefoodcateg">Chọn loại món ăn</string>
    <string name="text_pricerate">Giá</string>
    <string name="text_healthyrate">Vệ sinh</string>
    <string name="text_servicerate">Phục vụ</string>
    <string name="text_all">Tất cả</string>
    <string name="text_save">Save</string>
    <string name="text_saveaddloca">Lưu địa điểm</string>
    <string name="text_add">Thêm</string>
    <string name="text_foodcateName">Tên loại món</string>
    <string name="text_cancel">Hủy</string>
    <string name="text_address">Địa chỉ</string>
    <string name="text_email">Email</string>
    <string name="text_username">Tên tài khoản</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_confirmPass">Xác nhận mật khẩu</string>
    <string name="text_hoten">Họ tên</string>
    <string name="text_ho">Họ</string>
    <string name="text_tenLot">Tên lót</string>
    <string name="text_ten">Tên</string>
    <string name="text_birth">Ngày sinh</string>
    <string name="text_signup">Đăng kí</string>
    <string name="text_havenoacc"><u>Bạn chưa có tài khoản?</u></string>
    <string name="text_signin">Đăng nhập</string>
    <string name="text_not_internet">Không có kết nối internet</string>
    <string name="text_connect">Kết nối</string>
    <string name="text_signin_fail">Đăng nhập thất bại </string>
    <string name="text_signout_fail">Đăng xuất thất bại</string>
    <string name="text_signout_success">Đã đăng xuất</string>
    <string name="text_exit">Thoát</string>
    <string name="text_forgotPass"><u>Quên mật khẩu?</u></string>
    <string name="text_loginFB">Facebook</string>
    <string name="text_loginGmail">Goodle +</string>
    <string name="text_chooseLocation">Chọn địa điểm</string>
    <string name="text_pickProvince">Chọn Tỉnh/Thành Phố</string>
    <string name="text_pickFood">Chọn món ăn</string>
    <string name="text_pickDistrict">Chọn Quận/Huyện</string>
    <string name="text_addfoodCate">Thêm loại món</string>
    <string name="text_title">Tiêu đề</string>
    <string name="text_content">Nội dung</string>
    <string name="text_upImage">Chọn ảnh</string>
    <string name="text_vote">Đánh giá</string>
    <string name="text_hashtag">Tag</string>
    <string name="text_select">Chọn</string>
    <string name="text_taomoi">Tạo mới</string>
    <string name="text_signup_successful">Đăng kí thành công!!!</string>
    <string name="text_addfood_succ">Bạn vừa thêm món</string>
    <string name="text_addfood_failed">Lỗi thêm món ăn</string>
    <string name="text_addloca_succ">Thêm địa điểm thành công</string>
    <string name="text_addpost_succ">Thêm bài đăng thành công</string>
    <string name="text_failedaddpost">Thêm bài đăng mới không thành công</string>
    <string name="text_addloca_succ_user">Thêm địa điểm thành công, đang chờ admin duyệt</string>
    <string name="text_addpost_succ_user">Thêm bài đăng thành công, đang chờ admin duyệt</string>
    <string name="text_addfood_succ_user">Thêm món ăn thành công, đang chờ admin duyệt</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>
    <string name="text_addloca">Thêm địa điểm mới</string>
    <string name="text_dangreview">Thêm review</string>
    <string name="text_themanh">Thêm ảnh</string>
    <string name="text_comment1">Nhận xét</string>
    <string name="text_like">Thích</string>
    <string name="text_hello">Xin chào</string>
    <string name="text_block_user">Bạn đã bị admin khóa chức năng này</string>
    <string name="text_user">User</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hint_writecomment">Viết bình luận …</string>
    <string name="txt_writecomment">Viết bình luận</string>
    <string name="txt_needlogin">Bạn cần đăng nhập</string>
    <string name="txt_noemail">Bạn chưa nhập email</string>
    <string name="txt_notemail">Email không hợp lệ</string>
    <string name="txt_signinfail">Email hoặc mật khẩu không đúng</string>
    <string name="txt_notilockacc">Tài khoản của bạn đã bị khóa</string>
    <string name="txt_nopass">Bạn chưa nhập password</string>
    <string name="txt_deluser">Tài khoản đã bị xóa</string>
    <string name="txt_noho">Warning: Chưa nhập họ</string>
    <string name="txt_notenlot">Warning: Chưa nhập tên lót</string>
    <string name="txt_noten">Warning: Chưa nhập tên</string>
    <string name="txt_nongsinh">Warning: Chưa nhập ngày-tháng-năm sinh</string>
    <string name="txt_noun">Warning: Chưa nhập tên tài khoản</string>
    <string name="txt_noconfirmpass">Warning: Chưa nhập mật khẩu xác nhận</string>
    <string name="txt_nostorename">Bạn chưa điền tên quán</string>
    <string name="txt_nogia">Warning: Chưa nhập giá</string>
    <string name="txt_nophonenumb">Bạn chưa ghi số điện thoại</string>
    <string name="txt_noopentime">Warning: Chưa nhập giờ mở cửa</string>
    <string name="txt_noprivince">Warning: Chưa nhập Tỉnh/Thành phố</string>
    <string name="txt_nodistrict">Warning: Chưa nhập Quận/Huyện</string>
    <string name="txt_notitle">Bạn chưa điền tiêu đề</string>
    <string name="txt_nocontent">Bạn chưa điền nội dung</string>
    <string name="txt_nochoseloca">Bạn chưa chọn địa điểm</string>
    <string name="txt_noratefood">Bạn chưa đánh giá món ăn</string>
    <string name="txt_addinlocaerr">Bạn không thể thêm địa điểm mới</string>
    <string name="txt_nophoto">Bạn chưa chọn ảnh </string>
    <string name="txt_nofoodname">Bạn chưa điền tên món ăn</string>
    <string name="txt_nofoodprice">Bạn chưa điền giá món ăn</string>
    <string name="txt_noChoseProvince">Warning: Chưa chọn Tỉnh/Thành phố</string>
    <string name="txt_noChoseDistrict">Warning: Chưa chọn Quận/Huyện</string>
    <string name="txt_noChoseFood">Warning: Chưa chọn món ăn</string>
    <string name="txt_noChoseFoodCate">Warning: Chưa chọn loại món ăn</string>
    <string name="txt_noFoodCateName">Warning: Chưa nhập tên loại món ăn</string>
    <string name="txt_noaddress">Bạn chưa ghi địa chỉ</string>
    <string name="txt_choseLoca">Bạn đã chọn địa điểm</string>
    <string name="txt_failaddfoodcate">Error: Không thể thêm loại món mới</string>
    <string name="txt_posting_plzwait">Đang đăng bài&#8230;\n Vui lòng đợi chút!</string>
    <string name="txt_plzwait">Vui lòng đợi &#8230;</string>
    <string name="txt_logging">Đang đăng nhập &#8230;</string>
    <string name="txt_addinloca">Đang thêm địa điểm mới &#8230;</string>
    <string name="txt_addinmon">Đang thêm món mới &#8230;</string>
    <string name="txt_addinpost">Đang đăng review mới &#8230;</string>
    <string name="txt_logginout">Đang đăng xuất &#8230;</string>
    <string name="txt_addinfoodcate">Đang thêm loại món ăn mới &#8230;</string>
    <string name="txt_choose">Chọn</string>
    <string name="txt_chosefromloca">Chọn ảnh từ bộ nhớ</string>
    <string name="txt_chosefromuploaded">Chọn ảnh đã đăng</string>
    <string name="txt_viewprofilephoto">Xem ảnh cá nhân</string>
    <string name="txt_lastnews">Tin cuối</string>
    <string name="txt_mostcomment">Quan tâm</string>
    <string name="txt_mostlike">Yêu thích</string>
    <string name="txt_myloca">Vị trí của tôi</string>
    <string name="txt_chooseloca">Chọn địa điểm</string>
    <string name="txt_review">Review</string>
    <string name="txt_quanan">Quán ăn</string>
    <string name="txt_album">Album</string>
    <string name="txt_dsMon">Danh sách món ăn</string>
    <string name="txt_addedMon">Đã thêm món mới</string>
    <string name="txt_entrySearch">Nhập địa điểm &#8230;</string>
    <string name="txt_filter">Phân loại:</string>
    <string name="txt_search">Tìm kiếm</string>
    <string name="txt_local">Vị trí:</string>
    <string name="txt_localview">Xem theo Quán ăn\t</string>
    <string name="txt_reviewview">Xem theo Review\t</string>
    <string name="txt_report">Báo cáo</string>
    <string name="txt_followStore">Theo dõi quán ăn</string>
    <string name="txt_unfollowStore">Bỏ theo dõi quán ăn</string>
    <string name="txt_followPost">Theo dõi bài viết</string>
    <string name="txt_unfollowPost">Bỏ theo dõi bài viết</string>
    <string name="txt_xoataca">Xóa tất cả</string>
    <string name="txt_setdadoc">Đọc tất cả</string>
    <string name="txt_filter_newest">Mới nhất</string>
    <string name="txt_filter_vs">Vệ sinh</string>
    <string name="txt_filter_pv">Phục vụ</string>
    <string name="txt_filter_price">Giá cả</string>
    <string name="txt_filter_hl">Nổi bật</string>
    <string name="txt_filter_distance">Khoảng cách</string>
    <string name="txt_xemnoidungreport">Xem report</string>
    <string name="txt_denvitri">Xem bài đăng</string>
    <string name="txt_agree">Đồng ý</string>
    <string name="txt_disagree">Không đồng ý</string>
    <string name="firebaseDB_path">https://comnha-e4dbe.firebaseio.com/</string>
    <string name="firebaseStorage_path">gs://comnha-e4dbe.appspot.com/</string>
    <string name="nav_homepage">Trang chủ</string>
    <string name="nav_map">Bản đồ</string>
    <string name="nav_uploadedimg">Ảnh đã đăng</string>
    <string name="nav_activities">Hoạt động</string>
    <string name="nav_profile">Thông tin cá nhân</string>
    <string name="nav_notification">Thông báo</string>
    <string name="nav_activity">Activities</string>
    <string name="check1">Axt6OfAdQ9gd2pmxUqEK4wvHyal2</string>
    <string name="check2">5NX62wZ6JBQNu8zPNydI6qeJC5I3</string>
    <string name="DATA_FROM_FRAG">datafromfrag</string>
    <string name="frag_storelist_CODE">storelist</string>
    <string name="frag_about_CODE">about</string>
    <string name="frag_foodetail_CODE">fooddetail</string>
    <string name="frag_chooseimg_CODE">chooseimg</string>
    <string name="frag_choosestore_CODE">choosestore</string>
    <string name="frag_addstore_CODE">addstore</string>
    <string name="frag_map_CODE">map</string>
    <string name="frag_writepost_CODE">writepost</string>
    <string name="frag_menu_CODE">menu</string>
    <string name="frg_postdetail_CODE">postdetail</string>
    <string name="frg_viewfood_CODE">viewfood</string>
    <string name="text_fooddescribe">Mô tả món ăn</string>
    <string name="text_no">Không</string>
    <string name="text_block">Chặn</string>
    <string name="text_close">Đóng</string>
</resources>