<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.app.ptt.comnha.Fragment.AddFoodFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_addfood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgv_photo_addfood"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:scaleType="center"
                android:src="@drawable/ic_add_to_photos_50black_24dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilayout_name_addfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/edt_foodname_addfood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/text_foodname"
                    android:inputType="text|textFilter"
                    android:lines="1"
                    android:nextFocusDown="@+id/edt_price_addfood"
                    android:textAllCaps="false" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilayout_price_addfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:counterEnabled="false"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/edt_price_addfood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/text_price"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:nextFocusDown="@+id/edt_comment_addfood"
                    android:textAllCaps="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilayout_comment_addfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:counterEnabled="true"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/edt_comment_addfood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/text_fooddescribe"
                    android:inputType="textMultiLine|textFilter"
                    android:textAllCaps="false" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="24dp"
                android:background="@android:color/white"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="invisible">

                <Button
                    style="@style/BtnBorderlessGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cancel" />

                <Button
                    style="@style/BtnBorderlessGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_add" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="24dp"
        android:background="@android:color/white"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_addfood"
            style="@style/BtnBorderlessGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel" />

        <Button
            android:id="@+id/btn_save_addfood"
            style="@style/BtnBorderlessGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
